--- a/package.json
+++ b/package.json
@@ -1,19 +1,26 @@
 {
   "name": "@blankapp/plugin-i18n",
   "version": "1.0.0",
-  "main": "src/index.js",
+  "main": "lib/index.js",
   "repository": "https://github.com/blankapp/plugin-i18n.git",
   "author": "JianyingLi <lijy91@foxmail.com>",
   "license": "MIT",
   "scripts": {
+    "build": "node_modules/.bin/babel src --out-dir lib",
     "test": "jest"
   },
+  "pre-commit": [
+    "test",
+    "build"
+  ],
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-jest": "^23.4.2",
     "babel-preset-env": "^1.7.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^13.0.0",
     "eslint-plugin-import": "^2.13.0",
-    "jest": "^23.4.2"
+    "jest": "^23.4.2",
+    "pre-commit": "^1.2.2"
   }
 }
