--- a/Example/.babelrc
+++ b/Example/.babelrc
@@ -1,3 +1,16 @@
 {
-  "presets": ["module:metro-react-native-babel-preset"]
+  "presets": [
+    "react-native"
+  ],
+  "plugins": [
+    [
+      "transform-runtime",
+      {
+        "helpers": false,
+        "polyfill": false,
+        "regenerator": true,
+        "moduleName": "babel-runtime"
+      }
+    ]
+  ]
 }
