Rename Native Module `RNI18n` to `RNPluginI18n`

--- a/Example/android/app/build.gradle
+++ b/Example/android/app/build.gradle
@@ -98,7 +98,7 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
-        applicationId "com.example"
+        applicationId "org.blankapp.examples.i18n"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode Integer.parseInt(VERSION_CODE)
