--- a/Example/.babelrc
+++ b/Example/.babelrc
@@ -1,16 +1,3 @@
 {
-  "presets": [
-    "react-native"
-  ],
-  "plugins": [
-    [
-      "transform-runtime",
-      {
-        "helpers": false,
-        "polyfill": false,
-        "regenerator": true,
-        "moduleName": "babel-runtime"
-      }
-    ]
-  ]
+  "presets": ["module:metro-react-native-babel-preset"]
 }
