--- a/Example/ios/Podfile
+++ b/Example/ios/Podfile
@@ -35,7 +35,9 @@ target 'Example' do
   pod 'DoubleConversion', :podspec => '../node_modules/react-native/third-party-podspecs/DoubleConversion.podspec'
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
-
+  
+  pod 'RNPluginI18n', :path => '../../ios'
+  
   post_install do |installer|
     installer.pods_project.targets.each do |target|
       if target.name == "React"
