--- a/Example/package.json
+++ b/Example/package.json
@@ -7,60 +7,18 @@
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "node_modules/.bin/jest",
     "run-android": "node_modules/.bin/react-native run-android",
-    "run-ios": "node_modules/.bin/react-native run-ios --simulator='iPhone X'",
-    "run-web": "node web/scripts/start.js"
+    "run-ios": "node_modules/.bin/react-native run-ios --simulator='iPhone X'"
   },
   "dependencies": {
     "@blankapp/plugin-i18n": "../",
-    "query-string": "5.1.1",
-    "react": "16.5.1",
-    "react-art": "16.5.1",
-    "react-dom": "16.5.1",
-    "react-native": "0.55.4",
-    "react-native-web": "^0.9.6"
+    "react": "16.6.1",
+    "react-native": "0.57.7"
   },
   "devDependencies": {
-    "autoprefixer": "^7.2.6",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.1",
-    "babel-jest": "22.2.2",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.13",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-react-native": "4.0.0",
-    "babel-runtime": "^6.26.0",
-    "case-sensitive-paths-webpack-plugin": "^2.1.1",
-    "chalk": "^2.3.0",
-    "css-loader": "^0.28.9",
-    "dotenv": "^5.0.0",
-    "dotenv-expand": "4.2.0",
-    "eslint": "^4.17.0",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-flowtype": "^2.43.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.6.1",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.6",
-    "fs-extra": "^5.0.0",
-    "html-webpack-plugin": "^2.30.1",
-    "jest": "22.2.2",
-    "object-assign": "^4.1.1",
-    "postcss-flexbugs-fixes": "^3.3.0",
-    "postcss-loader": "^2.1.0",
-    "pre-commit": "^1.2.2",
-    "promise": "^8.0.1",
-    "raf": "^3.4.0",
-    "react-dev-utils": "^5.0.0",
-    "react-test-renderer": "16.2.0",
-    "style-loader": "^0.20.1",
-    "sw-precache-webpack-plugin": "^0.11.4",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.11.1",
-    "webpack-manifest-plugin": "^1.3.2",
-    "whatwg-fetch": "^2.0.3"
+    "babel-jest": "23.6.0",
+    "jest": "23.6.0",
+    "metro-react-native-babel-preset": "0.49.2",
+    "react-test-renderer": "16.6.1"
   },
   "jest": {
     "preset": "react-native"
